 /* $Id: ChangeLog,v 1.602 2000-01-02 21:32:50 davidr Exp $ */

 2000-01-02: David Raison <djr@lemur.co.uk>
        - OLEAUT32: Typelib fixes - Custom Data & Default values.
                    Added private logging to tlib_n.log when reading a TLIB.
                    (Should clarify what is being read & why)
                    Now supports embedded named TLIBS in the format
                    <path>\<libname>\<id> (required for VB6, etc.)
                    Preparatory work to reduce dependance on 
                    current file position to enable delaying parsing 
                    data until it is requested by user.

 2000-01-02: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: Implemented Set/GetWindowRgn (not activated)

 2000-01-01: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: Workaround for crash in Lotus Notes when switching to a new
                  view (PM sends WM_WINDOWPOSCHANGED msg after DestroyWindow
                  has been called for a window -> don't dispatch this msg)

 1999-12-31: Przemyslaw Dobrowolski <dobrawka@asua.org.pl>
	- WINMM: Implemented waveOutGet/SetVolume
	- KERNEL32: Fixed bugs in iccio.asm (OFFSET FLAT:devname)

 1999-12-31: Edgar Buerkle <Edgar.Buerkle@gmx.net>
	- KERNEL32: Started with implementation of debug apis & support
                    for debugging win32 apps (mostly for additional logging)

 1999-12-30: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: ported menu control from WINE (not yet activated)
		  ported icontitle control from WINE
		  added winswitch control (stub)
		  fixed Win32BaseWindow::hasWindowName

 1999-12-30: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Added stubs for Load/FreeLibrary16 & GetProcAddress16
                    (ordinals 35,36 & 37)
                    Added support for SEC_COMMIT memory map flag
                    Don't fail for unknown handles in (Msg)WaitForMultipleObject;